--- a/parts/profile/client/profile.jade
+++ b/parts/profile/client/profile.jade
@@ -60,7 +60,7 @@ template(name='profile_layout')
                             i.dashboard.icon
                             |dashboard
                         if currentUser
-                            a.circular.basic.button(href="/user/#{username}/posts" class="{{isActiveRoute 'user_posts'}}" title="#{user.username} posts")
+                            a.ui.circular.basic.button(href="/user/#{username}/posts" class="{{isActiveRoute 'user_posts'}}" title="#{user.username} posts")
                                 i.newspaper.icon
                                 |#{user_post_count}
                                 span posts
@@ -104,9 +104,9 @@ template(name='profile_layout')
                         // a.ui.icon.large.button(href="/user/#{username}/" class="{{isActiveRoute 'user_dashboard'}}" title="#{user.username} dashboard")
                         //     i.large.dashboard.icon
                             // span dashboard
-                        if is_dev
-                            +print_this
-                        .ui.hidden.divider
+                        // if is_dev
+                        //     +print_this
+                        // .ui.hidden.divider
                         .profile_yield
                             +yield    
                       
@@ -154,174 +154,6 @@ template(name='user_follow_button')
                     |follow
 
 
-template(name='user_dashboard')
-    .ui.stackable.grid
-        .row
-            .sixteen.wide.column
-                .ui.icon.input
-                    i.plus.icon
-                    input.add_feed_item(type='text' placeholder='add to feed (-10p)')
-                .ui.icon.small.disabled.button 
-                    i.gift.icon
-                .ui.icon.small.disabled.button 
-                    i.photo.icon
-                .ui.icon.small.disabled.button 
-                    i.hand.holding.icon
-                .ui.feed
-                    each feed_items 
-                        +feed_item
-                .ui.two.column.stackable.grid
-                    .column.smallscroll
-                        .ui.header bounties from
-                        .ui.divided.list
-                            each bounties_from
-                                .ui.item
-                                    // if is_author
-                                    //     +session_edit_toggle
-                                    //     if is_editing_this
-                                    //         +text_edit key='description' direct=true
-                                    //         +number_edit key='karma_bounty' direct=true
-                                    .ui.inline.header #{description}
-                                    .ui.inline.header #{karma_bounty}
-                                    // +boolean_view key='require_view' label='view' icon='eye' icon_only=true
-                                    // +boolean_view key='require_vote' label='vote' icon='thumbs up' icon_only=true
-                                    // +boolean_view key='require_reply' label='reply' icon='reply' icon_only=true
-                                    if require_view
-                                        +boolean_view key='view_requirement_met' label='view requirement met' icon_only=true icon='eye'
-                                    if require_vote
-                                        +boolean_view key='vote_requirement_met' label='vote requirement met' icon_only=true icon='thumbs up'
-                                    if require_reply
-                                        +boolean_view key='reply_requirement_met' label='reply requirement met' icon_only=true icon='reply'
-                                    +target_info
-                                    if is_admin
-                                        +print_this
-                                    .ui.label #{status}
-                                    a.ui.icon.button(href="/b/#{_id}")
-                                        i.chevron.right.icon
-                                    a.item(href="/b/#{_id}")
-                                        |#{when} 
-                                        +print_this
-                    .column.smallscroll
-                        .ui.header bounties to
-                        .ui.divided.list
-                            each bounties_to
-                                .ui.item
-                                    if is_author
-                                        +session_edit_toggle
-                                        if is_editing_this
-                                            +text_edit key='description' direct=true
-                                            +number_edit key='karma_bounty' direct=true
-                                    .ui.inline.header #{description}
-                                    .ui.inline.header #{karma_bounty}
-                                    // +boolean_view key='require_view' label='view' icon='eye' icon_only=true
-                                    // +boolean_view key='require_vote' label='vote' icon='thumbs up' icon_only=true
-                                    // +boolean_view key='require_reply' label='reply' icon='reply' icon_only=true
-                                    if require_view
-                                        +boolean_view key='view_requirement_met' label='view requirement met' icon_only=true icon='eye'
-                                    if require_vote
-                                        +boolean_view key='vote_requirement_met' label='vote requirement met' icon_only=true icon='thumbs up'
-                                    if require_reply
-                                        +boolean_view key='reply_requirement_met' label='reply requirement met' icon_only=true icon='reply'
-                                    +target_info
-                                    +print_this
-                                    +author_info
-                                    .ui.label #{status}
-                                    a.ui.icon.button(href="/b/#{_id}")
-                                        i.chevron.right.icon
-                                a.item(href="/b/#{_id}")
-                                    |#{when} 
-                                    +print_this
-                if currentUser
-                    .ui.two.column.stackable.grid
-                        .column
-                            a.ui.inline.spaced.header(href="/user/#{username}/debits")
-                                i.chevron.up.icon
-                                |karma sent
-                                |#{total_debit_amount}p
-                                // |sent
-                                small(title='debit count') (#{debit_count}x)
-                                small(title='rank') ##{global_debit_count_rank}
-                            each debit_tags
-                                .ui.small.label #{title} 
-                                    // small #{count}
-                            .ui.list.selection.animated.smallscroll
-                                each user_karma_sent
-                                    a.item(href="/debit/#{_id}/view") #{title} #{amount} #{points} #{when}, #{description}
-                                        each tags
-                                            .ui.small.label #{this}
-                                        +target_info
-                        .column
-                            a.ui.inline.header(href="/user/#{username}/credits")
-                                i.chevron.down.icon
-                                |karma received
-                                |#{total_credit_amount}p
-                                // |received
-                                small(title='received count') (#{credit_count}x) 
-                                small(title='rank') ##{global_credit_count_rank}
-                            each credit_tags
-                                .ui.small.label #{title}
-                            .ui.selection.animated.list.smallscroll
-                                each user_karma_received
-                                    a.item(href="/debit/#{_id}/view")
-                                        .header #{points}: #{title}
-                                        |#{description} #{amount} 
-                                        small #{when}
-                                        each tags
-                                            .ui.small.label #{this}
-                                        +author_info
-                        
-                    // .ui.small.header 
-                    //     label goto/create group
-                    // .ui.input
-                    //     input.goto_group(type='text' placeholder='name')
-                    // each group_bookmarks
-                    //     .ui.large.label
-                    //         i.remove.icon.remove_group
-                    //         span.pointer.click_group
-                    //             |#{name}
-                    //- .ui.icon.button.refresh_user_stats(title='refresh stats')
-                    //-     i.refresh.icon
-                    .ui.label #{user_post_count} posts x 10p = #{post_points}p
-                    i.minus.icon
-                    .ui.label #{user_comment_count} comments x 1p
-                    i.minus.icon
-                    .ui.label #{user_comment_count} tips sent totaling #{tips_sent_amount}
-                    i.plus.icon
-                    .ui.label #{tips_received_count} tips received totaling #{tips_received_amount}
-                    i.equals.icon
-                    .ui.big.label #{points}p
-                    .ui.header 
-                        i.chat.icon
-                        |comments
-                    .smallscroll
-                        each comments    
-                            +user_comment_small
-                    div
-                    .ui.header 
-                        i.users.icon
-                        |groups
-                    .smallscroll
-                        each groups    
-                            +user_group
-                    div
-                    .ui.inline.header 
-                        i.newspaper.icon
-                        |posts
-                    +session_select key='post_sort_key' value='viewer_ids' icon='eye'
-                    +session_select key='post_sort_key' value='points' icon='thumbs up'
-                    +session_select key='post_sort_key' value='_timestamp' icon='clock'
-                    .ui.link.list.smallscroll
-                        each posts
-                            +user_post_small
-                    .ui.header 
-                        i.donate.icon
-                        |tips
-                    .ui.link.list.smallscroll
-                        each tips
-                            +user_tip_small
-        .three.column.row
-            .column
-                +user_bookmarks_widget
 
 
 
@@ -351,27 +183,6 @@ template(name='session_select')
         i.icon(class=icon)
 
 
-template(name='user_posts')
-    .ui.header 
-        i.newspaper.icon
-        |posts
-    .ui.link.selection.animated.list.scrolling
-        each posts
-            a.ui.item(href="/p/#{_id}") 
-                .content
-                    if image_link
-                        +image_link_view key='image_link' direct=true
-                    if image_id
-                        img.ui.fluid.rounded.image.no_left(src="{{c.url image_id }}" class=currentUser.invert_class)
-                    if youtube_id
-                        .no_left
-                            +youtube_view key='youtube_id' label='youtube id' direct=true
-                
-                    .header #{title} 
-                    |#{when}
-                    each seven_tags 
-                        .ui.mini.label #{this}
-                    +author_info
 
 
 template(name='user_vault')
@@ -380,9 +191,9 @@ template(name='user_vault')
         |private posts
     .ui.link.list.scrolling
         each private_posts
-            a.ui.item(href="/p/#{_id}") 
+            a.ui.item(href="/post/#{_id}") 
                 if image_id
-                    a(href="/p/#{_id}/view")
+                    a(href="/post/#{_id}")
                         img.ui.small.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                 if image_link
                     img(src=image_link)
@@ -399,9 +210,9 @@ template(name='user_tips')
         |tips
     .ui.link.list.scrolling
         each tips
-            a.ui.item(href="/p/#{parent_id}") 
+            a.ui.item(href="/post/#{parent_id}") 
                 if parent.image_id
-                    a(href="/p/#{_id}")
+                    a(href="/post/#{_id}")
                         img.ui.small.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                 if parent.image_link
                     img(src=parent.image_link)
@@ -421,7 +232,7 @@ template(name='user_comments')
         |comments
     .ui.link.selection.animated.list.scrolling
         each comments
-            a.ui.item(href="/p/#{parent_id}") 
+            a.ui.item(href="/post/#{parent_id}") 
                 .content
                     .header #{body} 
                     |#{when}
@@ -435,7 +246,7 @@ template(name='user_comments')
 
 
 template(name='user_tip_small')
-    a.ui.item(href="/tip/#{_id}/view") 
+    a.ui.item(href="/tip/#{_id}") 
         |#{title} #{when} #{amount} #{parent_id}
         each tags 
             .ui.mini.label #{this}
@@ -447,11 +258,11 @@ template(name='user_comment_small')
 template(name='user_group')
     .ui.fluid.link.card.mark_viewed.pad
         .content
-            a.header(href="/p/#{_id}/view") 
+            a.header(href="/post/#{_id}") 
                 |#{title}
             |#{when}
             if image_link
-                a.view_post(href="/p/#{_id}/view" class=post_header_class)
+                a.view_post(href="/post/#{_id}" class=post_header_class)
                     img.ui.rounded.inline.zoomer.image.zoomer(src=image_link)    
             // |!{content}
             i.grey.eye.icon
@@ -463,7 +274,7 @@ template(name='user_group')
             +doc_emotion_small        
             // +skve k='view_preview' v='preview' l=' ' i='caret down'
             // if skv_is 'view_preview' 'preview'
-            a.ui.icon.button(href="/p/#{_id}/view") 
+            a.ui.icon.button(href="/post/#{_id}") 
                 i.chevron.right.icon
             if in_dev
                 +print_this
@@ -472,11 +283,11 @@ template(name='user_group')
 template(name='user_post_small')
     .ui.fluid.link.card.mark_viewed.pad
         .content
-            a.header(href="/p/#{_id}/view") 
+            a.header(href="/post/#{_id}") 
                 |#{title}
             |#{when}
             if image_link
-                a.view_post(href="/p/#{_id}/view" class=post_header_class)
+                a.view_post(href="/post/#{_id}" class=post_header_class)
                     img.ui.rounded.inline.zoomer.image.zoomer(src=image_link)    
             // |!{content}
             i.grey.eye.icon
@@ -488,7 +299,7 @@ template(name='user_post_small')
             +doc_emotion_small        
             // +skve k='view_preview' v='preview' l=' ' i='caret down'
             // if skv_is 'view_preview' 'preview'
-            a.ui.icon.button(href="/p/#{_id}/view") 
+            a.ui.icon.button(href="/post/#{_id}") 
                 i.chevron.right.icon
             if in_dev
                 +print_this
