--- a/parts/reddit/client/rpost.jade
+++ b/parts/reddit/client/rpost.jade
@@ -1,6 +1,6 @@
 template(name='rpost')
     with current_doc
-        .ui.stackable.grid
+        .ui.stackable.padded.grid
             .sixteen.wide.column
                 a.ui.basic.icon.circular.button(href="/")
                     i.chevron.left.large.icon
