--- a/parts/posts/posts.jade
+++ b/parts/posts/posts.jade
@@ -109,14 +109,14 @@ template(name='posts')
                 
 template(name='wikipedia_card')
     .ui.card
-        a(href="/m/post/#{_id}/view")
+        a(href="/m/post/#{_id}")
             img.ui.image(src=watson.metadata.image class=currentUser.invert_class) 
         .content
-            a.ui.header(href="/m/post/#{_id}/view") #{title}
+            a.ui.header(href="/m/post/#{_id}") #{title}
 
 template(name='post_card')
     .ui.card
-        a.image(href="/m/post/#{_id}/view")
+        a.image(href="/m/post/#{_id}")
             if is_youtube
                 .ui.embed(data-source="youtube" data-id=youtube_parse class=currentUser.invert_class)
         
@@ -133,7 +133,7 @@ template(name='post_card')
         if youtube_id
             +youtube_view key='youtube_id' direct=true
         else if image_id
-            a.image(href="/m/post/#{_id}/view")
+            a.image(href="/m/post/#{_id}")
                 img.ui.image(src="{{c.url image_id }}" class=currentUser.invert_class)
         // img.invert(src=url)
                 
@@ -141,7 +141,7 @@ template(name='post_card')
         //     img.ui.rounded.image(src=image_link class=currentUser.invert_class)
                 
         .content
-            a.header(href="/m/post/#{_id}/view")
+            a.header(href="/m/post/#{_id}")
                 i.right.chevron.circular.icon
                 |#{title}
             +vote
@@ -182,14 +182,14 @@ template(name='one_post_view')
         if is_youtube
             +youtube_view key='url' direct=true
         else if image_id
-            a.image(href="/m/post/#{_id}/view")
+            a.image(href="/m/post/#{_id}")
                 img.ui.image(src="{{c.url image_id width=1000 crop='fill'}}" class=currentUser.invert_class) 
         else
-            a.image(href="/m/post/#{_id}/view")
+            a.image(href="/m/post/#{_id}")
                 img.ui.image(src=watson.metadata.image class=currentUser.invert_class)    
  
         .content
-            a.inline.header(href="/m/post/#{_id}/view")
+            a.inline.header(href="/m/post/#{_id}")
                 i.right.chevron.circular.icon
                 |#{title}
             a.meta(href="/user/#{_author.username}/")
