--- a/parts/posts/post.jade
+++ b/parts/posts/post.jade
@@ -79,6 +79,7 @@ template(name='post_view')
                         .f12
                             |!{description}
                             |!{body}
+                            |!{content}
                             // a.ui.header(href="/user/#{target.username}")
                             //     img.ui.avatar.image(src="{{c.url target.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
                             //     |#{target.username}
