first working wiki page and search and doc view

--- a/client/client.jade
+++ b/client/client.jade
@@ -51,3 +51,12 @@ template(name='layout')
     
     // .ui.bottom.attached.pushable.segment
     //     #main_area.pusher(class=currentUser.invert_class)
+
+
+
+template(name='not_found')
+    .ui.basic.center.aligned.segment
+        .ui.header page not found
+        a(href="search")
+            i.massive.link.yin.yang.icon
+        
