--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -158,8 +158,8 @@ template(name='session_boolean_toggle')
 template(name='session_edit_value_button')
     .ui.circular.button.set_session_value(class=calculated_class)
         if icon
-            // i.icon(class=icon)
-            +i name=icon cl='ui avatar image'
+            i.icon(class=icon)
+            // +i name=icon cl='ui avatar image'
         if label
             |#{label}
         else 
