--- a/parts/wiki/client/wiki.jade
+++ b/parts/wiki/client/wiki.jade
@@ -9,7 +9,10 @@ template(name='wiki')
                 unless picked_wtags
                     .ui.center.aligned.basic.segment
                         .ui.icon.big.fluid.input
-                            i.search.icon
+                            if session_key_value_is 'loading' true
+                                i.wikipedia.loading.icon
+                            else
+                                i.wikipedia.icon
                             input.search_input(type='text' value=query autofocus='' placeholder="search wikipedia...")
                         div
                         +wiki_search_shortcut tag='math' icon='calculator'
@@ -84,10 +87,10 @@ template(name='wiki')
                 if picked_wtags
                     .ui.icon.input
                         if is_loading
-                            i.loading.yin.yang.large.icon
+                            i.loading.wikipedia.large.icon
                         else
-                            i.search.icon
-                        input.search_input(type='text' value=query autofocus='' placeholder="#{post_count}")
+                            i.wikipedia.icon
+                        input.search_input(type='text' value=query autofocus='' placeholder="#{post_count} wiki docs")
                         // .ui.label #{this}
                     
                     // if many_wtags
@@ -100,32 +103,18 @@ template(name='wiki')
                         +wtag_picker
                         // .ui.label(title=count) #{name}
         .row
-            .sixteen.wide.column
-                each wikis
-                    .ui.card
-                        if metadata.image
-                            // a(href=url target='_window')
-                            img.ui.image.toggle_view(src=metadata.image)
-                        .content
-                            i.large.wikipedia.icon
-                            a.ui.inline.header(href=url target='_window') #{title}
-                            a.black_text(href=url target='_window')
-                                |{{ trunc analyzed_text }}...
-                            each ten_tags
-                                +flat_wtag_picker
-                                // .ui.label.flat_wtag_pick #{this}
-                //         // if one_post
-                //         //     .ui.stackable.one.column.grid
-                //         //         each rposts
-                //         //             +card
-                                
-                //         // else if two_posts
-                //         //     .ui.stackable.three.centered.column.grid
-                //         //         each rposts
-                //         //             +card
-                //             // else if three_posts
-                //         // else
-            .sixteen.wide.column
+            .four.wide.column
+                div
+                .ui.inline.header
+                    i.clock.icon    
+                    |locations
+                each Locations
+                    .ui.basic.label.pick_Location(class=domain_selector_class)
+                        |#{name} 
+                        small #{count}
+                // .ui.inline.header.pull_latest #{display_name}
+
+            .twelve.wide.column
                 if picked_wtags
                     .ui.stackable.three.column.padded.grid.scrolling
                         if alpha
@@ -156,7 +145,7 @@ template(name='wcard')
                 else 
                     |#{metadata.title}
                 // span.inline.content
-            |{{ufrom created_utc}}
+            // |{{ufrom created_utc}}
             // each unique_wtags
             //     a.ui.basic.label.flat_wtag_pick #{this}
             // .ui.label #{data.domain}
