--- a/parts/wiki/client/wpost.jade
+++ b/parts/wiki/client/wpost.jade
@@ -1,31 +1,3 @@
-// template(name='post_edit')
-//     with current_doc
-//         .ui.stackable.padded.grid
-//             .row
-//                 .four.wide.column
-//                     .ui.header 
-//                         i.pencil.icon
-//                         if icon
-//                             +icolor name=icon
-//                         |edit '#{title}' post
-//                     a.ui.big.basic.button(href="/post/#{_id}" title='save')
-//                         i.green.checkmark.icon
-//                         |save
-//                     +print_this
-//                     with post_person
-//                         |#{first_name} #{last_name}
-//                     //- .ui.header
-//                     //-     |#{title}
-//                     i.circular.link.remove.icon.delete_post
-//                     div
-//                     +array_edit key='tags' label='tags' icon='tags' direct=true
-//                     +link_edit key='link' label='link' icon='link' direct=true
-//                 .twelve.wide.column 
-//                     +text_edit key='title' label='title' icon='header' direct=true
-//                     +image_link_edit key='image_link' label='image link' icon='image' direct=true
-//                     +image_edit key='image_id' label='image' icon='image' direct=true
-//                     +html_edit key='content' label='content' icon='content' direct=true
-
 template(name='wpost_view')
     with current_doc
         .ui.stackable.padded.grid
@@ -41,29 +13,11 @@ template(name='wpost_view')
                         if session_key_value_is 'view_post_section' 'tone'
                             +tone
                     if watson
-                        +session_edit_value_button key='view_post_section' value='analysis' label='analysis' icon='biotech'
+                        +session_edit_value_button key='view_post_section' value='analysis' label='analysis' icon='dna'
             
                     // +session_edit_value_button key='view_post_section' value='comments' label='comments' icon='chat'
                     +session_edit_value_button key='view_post_section' value='content' label='content' icon='content'
-                        // .scrolling
-                        img(src=url class=currentUser.invert_class)
-                        each preview.images 
-                            img(src=source.url)
-                        if is_youtube
-                            .ui.embed.rounded(data-source="youtube" data-id=youtube_parse class=currentUser.invert_class)
-                            // +youtube_view key='url' direct=true full=true
-                        // with rd.media_embed
-                        //     |!{content}
-            
-                        // +session_edit_value_button key='view_post_section' value='related' label='related' icon='fork'
                     if session_key_value_is 'view_post_section' 'content'
-                        if image_id
-                            img.ui.rounded.image(src="{{c.url image_id gravity='face' crop='fit'}}" class=currentUser.invert_class)
-                        if image_link
-                            img.ui.rounded.image(src=image_link class=currentUser.invert_class)
-                        if youtube_id
-                            +youtube_view key='youtube_id' direct=true
-                            i.large.tag.icon
                         // each tags 
                         //     .ui.compact.large.circular.button.add_tag #{this}
                         // a.image(href="/m/post/#{_id}/view")
@@ -93,7 +47,6 @@ template(name='wpost_view')
                     // a.ui.circular.icon.button(href='/')
                     //     i.yin.yang.large.icon
                     img.ui.rounded.image(src=watson.metadata.image class=currentUser.invert_class)    
-                    img.ui.rounded.image(src=rd.thumbnail class=currentUser.invert_class)    
                     
                     .spacer
                     // div
@@ -107,27 +60,8 @@ template(name='wpost_view')
                     +date_view key='date' label='date' direct=true
                     // div
                     .ui.label #{views} views
-                    .ui.link.selection.list
-                        .ui.fluid.accordion 
-                            each votes
-                                .title
-                                    a.ui.inline.header(href="/user/#{_author.username}") 
-                                        |#{points}
-                                        img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                                        |#{_author.username}
-                                    each _author.three_tags
-                                        .ui.small.basic.label #{this}
-                                    // i.dropdown.icon
-                                // .content
-                                //     .ui.list.smallscroll
-                                //         each tipper_tips
-                                //             .item 
-                                //                 |{{home_long_date _timestamp}} 
-                                //                 div
-                                //                 |#{when} 
-                    // if watson 
-                    //     +watson_view
                     each tags 
-                        .ui.compact.circular.button.add_tag #{this}
+                        +flat_wtag_picker
+                        // .ui.compact.circular.button.add_tag #{this}
                     
                     +print_this
